# opennotes

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_flags.txt  vcpkg.json
src/: args.cpp  command_handler.cpp  command_handler.hpp  log.hpp  main.cpp
src/commands/: dev_cmd.cpp  use_cmd.cpp  view_cmd.cpp
src/domino/: database.cpp  database.hpp  formula.cpp  formula.hpp  note.cpp  note.hpp  os.hpp  view.cpp  view.hpp
src/utils/: args.hpp  config.cpp  config.hpp  database.cpp  database.hpp  error.hpp  formula.cpp  formula.hpp  log.cpp  log.hpp  nif_collection.cpp  nif_collection.hpp  note.cpp  note.hpp  os.hpp  parser.hpp
